# industria_cpp

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: compile.bat  compile.sh  voxel.comp  voxel.spv
client/: clock.cpp  clock.hpp  event.cpp  event.hpp  input.cpp  input.hpp  main.cpp
client/platform/: platform.hpp  platform_linux.cpp
client/renderer/: command_buffer.cpp  command_buffer.hpp  device.cpp  fence.cpp  fence.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  shader_stage.cpp  shader_stage.hpp  swapchain.cpp  swapchain.hpp  voxel_shader.cpp  voxel_shader.hpp  vulkan_image.cpp  vulkan_image.hpp
server/math/: vector2.hpp  vector4.hpp
src/: clock.cpp  event.cpp  input.cpp  input.hpp  main.cpp
src/container/: free_list.hpp
src/handler/: voxel_handler.cpp  voxel_handler.hpp
src/math/: arithmetic.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/platform/: platform_linux.cpp  platform_windows.cpp
src/renderer/: command_buffer.cpp  command_buffer.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  renderer_platform.hpp  shader_stage.cpp  shader_stage.hpp  swapchain.cpp  swapchain.hpp  voxel_shader.cpp  voxel_shader.hpp  vulkan_image.cpp  vulkan_image.hpp
src/server/network/: net_message.cpp  net_message.hpp
src/voxel/: voxel.hpp  voxel_grid.cpp  voxel_grid.hpp  voxel_octree.cpp  voxel_octree.hpp
